--- a/src/pages/myimport/myimport.html
+++ b/src/pages/myimport/myimport.html
@@ -34,7 +34,7 @@
             
           </ion-item-options>
           <ion-item-options side="right">
-            <button ion-button color="danger" (click)='removeLocation(Myimport)'>
+            <button ion-button color="danger" (click)='removeLocation(Myimport[0])'>
               <ion-icon name="ios-trash"></ion-icon>
               Delete
             </button>
