--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,9 +7,9 @@
 </ion-header>
 
 <ion-content padding>
-  <button ion-button block color="Default" (click)="goToaddimportpage()">اضافة اماكن الفقرا</button>
+  <button ion-button block color="Default" (click)="goToaddimportpage()">  مساعدة الفقرا</button>
   <br> 
-  <button ion-button block color="danger" (click)="goToinmportpage()"> مساعدة الفقرا</button>
+  <button ion-button block color="danger" (click)="goToinmportpage()">اضافة اماكن الفقرا</button>
   <br> 
   <button ion-button block color="secondary" (click)="goTomyimportpage()">حالات الانسانية </button>
   <br> 
